# pocketsmith-rust-api

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/commands/: categorise.md
.claude/skills/: appraise-payee.md  measure-quality.md  normalise-loop.md  refine-rules.md  write-rules.md
lab/: baseline.json  iterations.tsv
lab/iteration_001/: diff_sample.json  metrics.json
lab/iteration_002/: metrics.json  notes.md
lab/iteration_003/: metrics.json  notes.md
lab/iteration_004/: metrics.json  notes.md
lab/iteration_005/: metrics.json
lab/iteration_006/: metrics.json
lab/iteration_007/: metrics.json  notes.md
lab/iteration_008/: metrics.json
lab/iteration_009/: metrics.json
lab/iteration_010/: metrics.json
lab/iteration_011/: diff_sample.json  metrics.json
lab/iteration_012/: metrics.json  notes.md
lab/iteration_013/: metrics.json  notes.md
lab/iteration_014/: metrics.json  notes.md
lab/iteration_015/: metrics.json  notes.md
lab/iteration_016/: notes.md
lab/iteration_017/: notes.md
lab/iteration_018/: cluster_stderr.txt  clusters.json  notes.md
lab/iteration_019/: metrics.json  notes.md
lab/iteration_020/: metrics.json  notes.md
lab/iteration_021/: metrics.json  notes.md
lab/iteration_022/: metrics.json  notes.md
lab/iteration_023/: metrics.json  notes.md
lab/iteration_024/: metrics.json  notes.md
queries/: favourites
rules/: categorise.yaml  identify.yaml
src/: client.rs  db.rs  known_entities.rs  lib.rs  main.rs  models.rs  normalise.rs  sync.rs  transfers.rs
src/categorise/: audit.rs  (+8 more)
tests/: api_integration.rs
(+66 files in other folders)
