[package]
name = "pocketsmith-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "normalise"
path = "src/bin/normalise.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
fancy-regex = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
dotenvy = "0.15"
