[package]
name = "pocketsmith-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
dotenvy = "0.15"
regex = "1"
libc = "0.2"

[[bin]]
name = "transfers"
path = "src/bin/transfers.rs"

[[bin]]
name = "normalise"
path = "src/bin/normalise.rs"
